--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  max-width: 400px;
 }
 
 .treasure-hunt__panel {
@@ -42,4 +43,26 @@ body {
 .message {
   font-size: 1.5rem;
   transition: cubic-bezier(0.165, 0.84, 0.44, 1) 1s;
+}
+
+.message--show {
+  animation: fade-animation .5s;
+}
+
+@keyframes fade-animation {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-.2em);
+  }
+  50% {
+    transform: translateX(.2em);
+  }
+  75% {
+    transform: translateX(-.2em);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
